Addition of output form
- 1 additional HTML file with output example
- updates to nav to include output tab
- addition to CSS file to cater for range class

--- a/gg-html-forms.css
+++ b/gg-html-forms.css
@@ -71,6 +71,18 @@ form.datalist {
     margin-left: auto;
 }
 
+form.range {
+    font-family: calibri;
+    padding: 0px;
+    text-align: left;
+    width: 375px;
+    position: fixed;
+    right: 0;
+    left: 10;
+    margin-right: auto;
+    margin-left: auto; 
+}
+
 select {
     margin: 0px;
     width: 75px;
