--- a/gg-html-forms.css
+++ b/gg-html-forms.css
@@ -51,7 +51,7 @@ form {
     font-family: calibri;
     padding: 50px;
     text-align: left;
-    width: 75px;
+    width: 110px;
     position: fixed;
     right: 0;
     left: 0;
@@ -98,5 +98,14 @@ button {
     border-radius: 5px;
     padding: 3px;
     margin-top: 15px;
+}
+
+input {
+    padding: 5px;
+    margin-bottom: 5px;
+}
+
+input.range {
+    padding: 0px;
 }
 
