Form style updates
- Rounded corners to text fields, etc.
- Addition of number field to -submit file

--- a/gg-html-forms.css
+++ b/gg-html-forms.css
@@ -103,9 +103,18 @@ button {
 input {
     padding: 5px;
     margin-bottom: 5px;
+    border-radius: 5px
 }
 
 input.range {
     padding: 0px;
 }
 
+textarea {
+    border-radius: 5px;
+}
+
+fieldset {
+    border-radius: 5px;
+    width: 150%;
+}
