--- a/gg-html-forms.css
+++ b/gg-html-forms.css
@@ -36,6 +36,10 @@ nav li a:hover {
     background-color: #EDEDED;
 }
 
+nav li a.active {
+    background-color: aliceblue;
+}
+
 p.select {
     margin-top: 50px;
     font-family: calibri;
@@ -52,11 +56,7 @@ form {
     padding: 50px;
     text-align: left;
     width: 110px;
-    position: fixed;
-    right: 0;
-    left: 0;
-    margin-right: auto;
-    margin-left: auto;
+    margin: auto;
 }
 
 form.datalist {
@@ -64,11 +64,7 @@ form.datalist {
     padding: 0px;
     text-align: left;
     width: 210px;
-    position: fixed;
-    right: 0;
-    left: 10;
-    margin-right: auto;
-    margin-left: auto;
+    margin: auto;
 }
 
 form.range {
@@ -76,21 +72,12 @@ form.range {
     padding: 0px;
     text-align: left;
     width: 375px;
-    position: fixed;
-    right: 0;
-    left: 10;
-    margin-right: auto;
-    margin-left: auto; 
+    margin: auto;
 }
 
-select {
-    margin: 0px;
-    width: 75px;
-    position: fixed;
-    right: 0;
-    left: 0;
-    margin-right: auto;
-    margin-left: auto;
+#select {
+    margin: auto;
+    text-align: center;
 }
 
 button {
